--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate && next build"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.4.2",
@@ -64,7 +65,6 @@
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "velite": "^0.1.1"
+    "typescript": "^5"
   }
 }
