--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/mdx": "^14.2.5",
     "@prisma/client": "^5.17.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
@@ -46,6 +49,7 @@
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-textarea-autosize": "^8.5.3",
     "remark-gfm": "^4.0.0",
     "shiki": "^1.12.1",
     "tailwind-merge": "^2.4.0",
